Case Study QA fixes
This commit cleans up the template components for Case Studies, Posts
and Roles so that they can be visited via a direct url.

Fixes:
- layout issues
- Font style issues
- sidebar on desktop

--- a/client/src/components/CaseStudy/Header/styles.module.scss
+++ b/client/src/components/CaseStudy/Header/styles.module.scss
@@ -16,6 +16,6 @@
 
 .block_subtitle {
   @include fsz(24px);
-  line-height: 1.29;
+  line-height: 1;
   letter-spacing: -0.2px;
 }
